Fixed button spacing and text localize feature

--- a/.storybook/themes/news.scss
+++ b/.storybook/themes/news.scss
@@ -2755,6 +2755,16 @@
 						),
 					),
 				),
+				lead-art-carousel-close-icon: (
+					right: 96%,
+				),
+				lead-art-carousel-image-wrapper: (
+					components: (
+						button: (
+							left: var(--global-spacing-6),
+						),
+					),
+				),
 				masthead: (
 					display: flex,
 				),
